# nc-reader

./: API_DOCUMENTATION.md  Cargo.toml  LICENSE.md  README.md
src/: error.rs  file_reader.rs  lib.rs  main.rs  nc_reader_result.rs  output.rs
src/reader/: charset.rs  csv_reader.rs  gzip_reader.rs  image_reader.rs  json_reader.rs  md_reader.rs  mod.rs  parquet_reader.rs  pdf_reader.rs  spreadsheet_reader.rs  sqlite_reader.rs  toml_reader.rs  txt_reader.rs  xml_reader.rs  yaml_reader.rs  zip_reader.rs
tests/: integration_tests.rs  streaming_tests.rs
