[package]
name = "nc-reader"
description = "The Neuro-Catalyze Data Reader"
version = "0.0.1-alpha"
authors = ["The Architect <architect@theneurocatalyst.com>"]
edition = "2024"
license = "MIT"
repository = "[https://github.com/The-Neuro-Catalyst-Foundation/nc-reader](https://github.com/The-Neuro-Catalyst-Foundation/nc-reader)"
categories = ["science", "data-structures", "algorithms"]
keywords = ["scm-protocol", "velocity-mechanics", "zero-friction"]

[package.metadata]
protocol_alignment = "SCM-PROTOCOL"
integrity_level = "STRATEGIC_GRADE"
kernel_paradigm = "INVERSION_LOGIC"
audit_path = "NEURAL_VALIDATED"
verdict = "Consensus is a lagging indicator. We map the hidden 99%."

[dependencies]
chrono-tz = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }       # Added serde
serde_json = "1.0"
flate2 = "1.0"
image = "=0.25.1"
kamadak-exif = "0.5.5"
parquet = "57.1.0"                                       # Removed serde feature
arrow = "57.1.0"                                         # Removed serde feature
pdf-extract = "0.10.0"
calamine = "0.32.0"
rusqlite = "0.37.0"
toml = "0.8.12"
quick-xml = { version = "0.38.4", features = ["serde"] }
serde_yaml = "0.9.34"
zip = "0.6.6"
walkdir = "2.5.0"
pulldown-cmark.workspace = true
arrow-flight.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
nc-schema = { path = "../nc_schema" }
chardetng.workspace = true
encoding_rs.workspace = true
encoding_rs_io.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
assert_cmd = "2.0"
